//

syntax = "proto3";
import "google/protobuf/empty.proto";
package SECDPAS.grpc;

// Register

message RegisterRequest {
    //Class PublicKey
    bytes publicKey = 1;
    bytes signature = 2;
}

// Post(General)

message PostRequest {
    //PublicKey
    bytes publicKey = 1;
    //Char[256]
    string message = 2;
    bytes messageSignature = 3;
    //Array Announcements
    bytes announcements = 4;
    string board = 5;
    int64 freshness = 6;
}

message ReadRequest {
    //PublicKey
    bytes targetPublicKey = 1;
    bytes clientPublicKey = 2;
    //Number of posts to see
    int32 number = 3;
    int64 freshness = 4;
    bytes signature = 5;
}

message EchoRequest {
    int32 serverID = 1;
    bytes request = 3;
    bytes signature = 4;
}

message ReadyRequest {
    int32 serverID = 1;
    bytes request = 2;
    bytes announcementSignature = 3;
    bytes signature = 4;
}

message EchoReadyACK {
    int32 serverID = 1;
    string type = 2;
    bytes requestHash = 3;
    bytes signature = 4;
}

message ReadResponse {
    //Array of announcements
    bytes announcements = 1;
    int64 freshness = 2;
    bytes signature = 3;
    bytes publicKey = 4;
}

// Testing messages
message TestsResponse {
    bool testResult = 1;
}

// Server side ACK
message ACK {
    int64 freshness = 1;
    bytes publicKey = 2;
    bytes signature = 3;
}

// Defining a Service, a Service can have multiple RPC operations
service DPASService {
    rpc register(RegisterRequest) returns (ACK);
    rpc post(PostRequest) returns (ACK);
    rpc postGeneral(PostRequest) returns (ACK);
    rpc read(ReadRequest) returns (ReadResponse);
    rpc readGeneral(ReadRequest) returns (ReadResponse);

    // Authenticated Double Echo Broadcast
    rpc echo(EchoRequest) returns (EchoReadyACK);
    rpc ready(ReadyRequest) returns (EchoReadyACK);

    // Testing Functions
    rpc clientRegisteredState(RegisterRequest) returns (TestsResponse);
    rpc postState(PostRequest) returns (TestsResponse);
    rpc postGeneralState(PostRequest) returns (TestsResponse);
    rpc cleanPosts(google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc cleanGeneralPosts(google.protobuf.Empty) returns (google.protobuf.Empty);
}
